--- a/ParcelSystem/client/static/client.html
+++ b/ParcelSystem/client/static/client.html
@@ -1,202 +1,215 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>Parcel Client — Scan & Preview</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <script src="https://unpkg.com/html5-qrcode"></script>
+
   <style>
     body{font-family:Inter,system-ui,Segoe UI,Roboto,sans-serif;margin:0;background:#f4f6f9;color:#222}
     .wrap{max-width:900px;margin:24px auto;padding:16px}
     header{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px}
     .server{font-size:14px;color:#666}
-    .card{background:#fff;border-radius:10px;padding:16px;box-shadow:0 8px 20px rgba(12,20,40,0.06);margin-bottom:12px}
+    .card{background:#fff;border-radius:10px;padding:16px;box-shadow:0 8px 20px rgba(12,20,40,.06);margin-bottom:12px}
     input.scan{width:100%;padding:14px;border:2px dashed #cfd8e3;border-radius:8px;font-size:18px}
-    .row{display:flex;gap:12px;align-items:center}
+    input.scan:disabled{background:#f0f0f0}
+    .row{display:flex;gap:12px;align-items:center;flex-wrap:wrap}
     button.btn{background:#f95e07;color:#fff;border:none;padding:10px 14px;border-radius:8px;cursor:pointer}
+    button.btn:disabled{opacity:.6;cursor:not-allowed}
+    button.ghost{background:#fff;border:1px solid #e6eef6;color:#345395}
+    button.danger{background:#e74c3c}
     table{width:100%;border-collapse:collapse;margin-top:12px}
     th,td{padding:8px;border-bottom:1px solid #eef2f6;text-align:left}
     .muted{color:#666;font-size:13px}
-    .small{font-size:13px}
-    .ghost{background:#fff;border:1px solid #e6eef6;color:#345395}
-    .danger{background:#e74c3c}
+    #reader{width:100%;max-width:360px;margin-top:12px}
+
+    /* highlight ล่าสุด */
+    tr.latest{background:#fff6e5;animation:flash .4s}
+    @keyframes flash{from{background:#ffe0b2}to{background:#fff6e5}}
   </style>
 </head>
+
 <body>
-  <div class="wrap">
-    <header>
-      <h2>Parcel Client — Scan & Preview</h2>
-      <div class="server">Server: <span id="serverUrl">http://127.0.0.1:8000</span></div>
-    </header>
+<div class="wrap">
 
-    <div class="card">
-      <div class="small muted">Scan or type tracking number and press Enter</div>
-      <input id="scanInput" class="scan" placeholder="Scan tracking here and press Enter" autofocus autocomplete="off" />
-      <div style="margin-top:10px" class="row">
-        <div class="muted">Session preview: <strong id="previewCount">0</strong> items</div>
-        <div style="margin-left:auto">
-          <button class="btn ghost" onclick="clearPreview()">Clear</button>
-          <button class="btn" id="confirmAllBtn" onclick="confirmAll()" disabled>Confirm All</button>
-        </div>
-      </div>
-      <div id="messages" style="margin-top:8px;color:#c0392b"></div>
+<header>
+  <h2>Parcel Client — Scan & Preview</h2>
+  <div class="server">Server: <span id="serverUrl"></span></div>
+</header>
+
+<div class="card">
+  <input id="scanInput" class="scan" placeholder="ป้อนข้อมูลด้วยตนเอง (ไม่บังคับ)" autocomplete="off" />
+
+  <div class="row" style="margin-top:10px">
+    <button class="btn ghost" onclick="startCamera()">📷 Open Camera</button>
+    <button class="btn danger" onclick="stopCamera()">✖ Stop Camera</button>
+
+    <div class="muted" style="margin-left:auto">
+      Preview: <strong id="previewCount">0</strong>
     </div>
 
-    <div class="card">
-      <strong>Preview</strong>
-      <div class="muted small">รายการที่สแกนใน session นี้ — ยืนยันเมื่อพร้อม</div>
-      <div id="previewTableWrap" style="margin-top:12px">
-        <table id="previewTable">
-          <thead><tr><th>#</th><th>tracking</th><th>queue</th><th>status</th><th>action</th></tr></thead>
-          <tbody></tbody>
-        </table>
-      </div>
-    </div>
-
-    <div class="card">
-      <strong>Recent</strong>
-      <div class="muted small">รายการล่าสุดจาก server</div>
-      <div id="recentWrap" style="margin-top:12px"></div>
-    </div>
+    <button class="btn" id="confirmAllBtn" onclick="confirmAll()" disabled>
+      Confirm All
+    </button>
   </div>
 
+  <div id="reader"></div>
+  <div id="messages" style="margin-top:8px"></div>
+</div>
+
+<div class="card">
+  <strong>Preview</strong>
+  <table>
+    <thead>
+      <tr><th>#</th><th>Tracking</th><th>Queue</th><th>Status</th><th></th></tr>
+    </thead>
+    <tbody id="previewBody"></tbody>
+  </table>
+</div>
+
+</div>
+
 <script>
-const SERVER = (location.hostname === 'localhost' || location.hostname === '127.0.0.1') ? 'http://127.0.0.1:8000' : (location.origin);
+/* ---------------- CONFIG ---------------- */
+const SERVER = location.origin;
 document.getElementById('serverUrl').innerText = SERVER;
 
+/* ---------------- STATE ---------------- */
 const scanInput = document.getElementById('scanInput');
-const preview = []; // {tracking, queue, status, id}
-const previewTbody = document.querySelector('#previewTable tbody');
+const previewBody = document.getElementById('previewBody');
 const previewCount = document.getElementById('previewCount');
 const confirmAllBtn = document.getElementById('confirmAllBtn');
 const messages = document.getElementById('messages');
 
-scanInput.addEventListener('keypress', async (e)=>{
-  if(e.key === 'Enter'){
-    const val = scanInput.value.trim();
-    if(!val) return;
-    messages.innerText = '';
-    await handleScan(val);
-    scanInput.value = '';
-    scanInput.focus();
+let preview = JSON.parse(localStorage.getItem('preview') || '[]');
+let qrScanner = null;
+let scanningLocked = false;
+let busy = false;
+
+/* ---------------- SOUND + VIBRATE ---------------- */
+function beep(type="ok"){
+  const ctx=new (window.AudioContext||window.webkitAudioContext)();
+  const osc=ctx.createOscillator();
+  const gain=ctx.createGain();
+  osc.connect(gain);gain.connect(ctx.destination);
+
+  if(type==="ok"){osc.frequency.value=880;gain.gain.value=.15;osc.start();osc.stop(ctx.currentTime+.12);}
+  else{osc.frequency.value=220;gain.gain.value=.25;osc.start();osc.stop(ctx.currentTime+.25);}
+}
+function vibrate(){ if(navigator.vibrate) navigator.vibrate(100); }
+
+/* ---------------- KEYBOARD ---------------- */
+scanInput.addEventListener('keydown',e=>{
+  if(e.key==="Enter"){
+    const v=scanInput.value.trim();
+    scanInput.value='';
+    handleScan(v);
   }
 });
 
-async function handleScan(tracking){
-  // check if already in preview
-  if(preview.find(p=>p.tracking === tracking)){
-    flashMsg('Already in preview');
-    return;
-  }
+/* ---------------- CAMERA ---------------- */
+function startCamera(){
+  if(qrScanner) return;
+  scanningLocked=false;
+  qrScanner=new Html5Qrcode("reader");
 
-  // try to create provisional (provisional=true -> status=PENDING)
+  Html5Qrcode.getCameras().then(cams=>{
+    if(!cams.length){flashMsg("No camera",false);return;}
+    qrScanner.start(cams[cams.length-1].id,{fps:10,qrbox:250},
+      text=>{
+        if(scanningLocked) return;
+        scanningLocked=true;
+        handleScan(text).finally(()=>setTimeout(stopCamera,300));
+      });
+  });
+}
+
+function stopCamera(){
+  if(!qrScanner) return;
+  qrScanner.stop().then(()=>{qrScanner.clear();qrScanner=null;scanningLocked=false;});
+}
+
+/* ---------------- CORE ---------------- */
+async function handleScan(tracking){
+  if(!tracking||busy) return;
+  busy=true; scanInput.disabled=true;
+
   try{
-    const body = {tracking_number: tracking, provisional: true};
-    const res = await fetch(`${SERVER}/api/parcels`, {method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(body)});
-    if(res.status === 409){
-      // already exists -> fetch existing and add to preview
-      const j = await res.json();
-      flashMsg('Already exists on server — adding existing item to preview');
-      // get detail
-      const dres = await fetch(`${SERVER}/api/parcels/${encodeURIComponent(tracking)}`);
-      if(dres.ok){
-        const data = await dres.json();
-        addToPreview({tracking: data.tracking_number, queue: data.queue_number, status: data.status, id: data.id});
-      }
-      return;
+    if(preview.find(p=>p.tracking===tracking)){
+      beep("error");flashMsg("Already scanned",false);return;
     }
-    if(!res.ok){
-      const text = await res.text();
-      flashMsg('Server error: ' + text);
-      return;
+
+    const res=await fetch(`${SERVER}/api/parcels`,{
+      method:'POST',headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({tracking_number:tracking,provisional:true})
+    });
+
+    if(res.status===409){
+      const d=await fetch(`${SERVER}/api/parcels/${tracking}`).then(r=>r.json());
+      addPreview(d.tracking_number,d.queue_number,d.status);
+      beep("ok");vibrate();return;
     }
-    const j = await res.json();
-    // j should contain id and queue_number
-    addToPreview({tracking: tracking, queue: j.queue_number ?? j.queue, status: 'PENDING', id: j.id ?? null});
-  }catch(err){
-    flashMsg('Network error: ' + err.message);
+
+    const j=await res.json();
+    addPreview(tracking,j.queue_number,'PENDING');
+    beep("ok");vibrate();
+  }catch(e){
+    beep("error");flashMsg(e.message,false);
+  }finally{
+    busy=false;scanInput.disabled=false;scanInput.focus();
   }
 }
 
-function addToPreview(item){
-  preview.push(item);
-  renderPreview();
+function addPreview(tracking,queue,status){
+  preview.unshift({tracking,queue,status});
+  savePreview(); renderPreview();
 }
 
 function renderPreview(){
-  previewTbody.innerHTML = '';
-  preview.forEach((p, idx)=>{
-    const tr = document.createElement('tr');
-    tr.innerHTML = `<td>${idx+1}</td>
-      <td>${p.tracking}</td>
-      <td>${p.queue || ''}</td>
-      <td>${p.status}</td>
-      <td><button onclick="removeAt(${idx})">Remove</button></td>`;
-    previewTbody.appendChild(tr);
+  previewBody.innerHTML='';
+  preview.forEach((p,i)=>{
+    previewBody.innerHTML+=`
+      <tr class="${i===0?'latest':''}">
+        <td>${i+1}</td>
+        <td>${p.tracking}</td>
+        <td>${p.queue||''}</td>
+        <td>${p.status}</td>
+        <td><button onclick="removeAt(${i})">Remove</button></td>
+      </tr>`;
   });
-  previewCount.innerText = preview.length;
-  confirmAllBtn.disabled = preview.length === 0;
+  previewCount.innerText=preview.length;
+  confirmAllBtn.disabled=!preview.length;
 }
 
-function removeAt(i){
-  preview.splice(i,1);
-  renderPreview();
-}
+function removeAt(i){preview.splice(i,1);savePreview();renderPreview();}
 
-function clearPreview(){
-  preview.length = 0;
-  renderPreview();
-  messages.innerText = '';
-}
-
-// Confirm all: call confirm_pending for each tracking (or change to desired final action)
+/* ---------------- CONFIRM ---------------- */
 async function confirmAll(){
-  confirmAllBtn.disabled = true;
-  messages.innerText = 'Confirming...';
-  for(const item of [...preview]){
-    try{
-      const res = await fetch(`${SERVER}/api/parcels/${encodeURIComponent(item.tracking)}/confirm_pending`, {method:'POST'});
-      if(res.ok){
-        // mark as RECEIVED
-        item.status = 'RECEIVED';
-      } else {
-        const j = await res.json().catch(()=>null);
-        console.warn('confirm failed', j || await res.text());
-      }
-    } catch(err){
-      console.error('network', err);
-    }
+  confirmAllBtn.disabled=true;
+  for(const p of preview){
+    await fetch(`${SERVER}/api/parcels/${p.tracking}/confirm_pending`,{method:'POST'});
   }
-  messages.innerText = 'Confirmed all (local preview cleared)';
-  clearPreview();
-  loadRecent();
+  preview=[];savePreview();renderPreview();
+  flashMsg("Confirmed all",true);
 }
 
-// quick helper to show recent parcels
-async function loadRecent(){
-  const wrap = document.getElementById('recentWrap');
-  try{
-    const res = await fetch(`${SERVER}/api/parcels?limit=10`);
-    if(!res.ok) { wrap.innerText = 'Failed to load recent'; return; }
-    const arr = await res.json();
-    if(!Array.isArray(arr) || arr.length === 0){ wrap.innerHTML = '<div class="muted">No recent items</div>'; return; }
-    const html = ['<table><thead><tr><th>tracking</th><th>queue</th><th>status</th></tr></thead><tbody>'];
-    for(const r of arr){
-      html.push(`<tr><td>${r.tracking_number}</td><td>${r.queue_number}</td><td>${r.status}</td></tr>`);
-    }
-    html.push('</tbody></table>');
-    wrap.innerHTML = html.join('');
-  }catch(e){
-    wrap.innerText = 'Error: ' + e.message;
-  }
+/* ---------------- OFFLINE ---------------- */
+function savePreview(){localStorage.setItem("preview",JSON.stringify(preview));}
+
+/* ---------------- UTIL ---------------- */
+function flashMsg(t,ok=true){
+  messages.innerHTML=`<strong>${ok?'✔':'✖'}</strong> ${t}`;
+  messages.style.color=ok?'#2ecc71':'#e74c3c';
+  setTimeout(()=>messages.innerHTML='',3000);
 }
 
-function flashMsg(txt){
-  messages.innerText = txt;
-  setTimeout(()=>{ if(messages.innerText === txt) messages.innerText = ''; }, 4000);
-}
-
-// autoset focus
-window.addEventListener('load', ()=>{ scanInput.focus(); loadRecent(); });
+/* ---------------- INIT ---------------- */
+window.onload=()=>{
+  renderPreview();
+  scanInput.focus();
+};
 </script>
 </body>
 </html>
